[package]
name = "h33-bfv32"
version = "0.1.0"
edition = "2021"
description = "Open source 32-bit BFV fully homomorphic encryption — compute on encrypted data without decrypting. ARM NEON optimized."
license = "MIT"
repository = "https://github.com/HapPhi/h33-bfv32"
homepage = "https://h33.ai"
documentation = "https://docs.rs/h33-bfv32"
keywords = ["fhe", "homomorphic-encryption", "bfv", "cryptography", "privacy"]
categories = ["cryptography", "no-std"]
authors = ["H33.ai, Inc. <engineering@h33.ai>"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bfv32_bench"
harness = false
